@@ -19,7 +19,8 @@ class MailingForm extends sfForm
 			  'height' => 350,
 			  'config' => '	theme_advanced_buttons1 : "bold,italic,underline,fontsizeselect,fontselect,forecolorpicker,image,link,justifyleft,justifycenter,justifyright,justifyfull,bullist,numlist,indent,outdent",
 			  				theme_advanced_buttons2 : "",
-			  				theme_advanced_buttons3 : ""'
+			  				theme_advanced_buttons3 : "",
+			  				theme_advanced_statusbar_location : "none"'
 			))
 		));
 		
